@@ -1,0 +1,14 @@
+"doc"
+
+def xx(**kw):
+    pass
+
+def yy():
+    c = yy
+    g, h = 1, 2
+    xx(a='', b=c.a.d.f, e=5, jj=xx(j=5), f=(g+h))
+
+def zz():
+    b = zz
+    xx(b=(1, 2, 3), c={ 'a': b}, d=[1, 2, 3], k=(1 < 2))
+
